chore: sync repo before update release

--- a/components/launcher-shell.html
+++ b/components/launcher-shell.html
@@ -171,6 +171,16 @@
                   <button class="account-menu-item" type="button" role="menuitem" data-account-action="store">JOGOS</button>
                   <button class="account-menu-item" type="button" role="menuitem" data-account-action="library">BIBLIOTECA</button>
                   <button class="account-menu-item" type="button" role="menuitem" data-account-action="folder">PASTA LOCAL</button>
+                  <button
+                    id="accountStartupBtn"
+                    class="account-menu-item"
+                    type="button"
+                    role="menuitemcheckbox"
+                    aria-checked="false"
+                    data-account-action="startup"
+                  >
+                    INICIALIZAR COM SISTEMA: DESATIVADO
+                  </button>
                   <button class="account-menu-item is-danger" type="button" role="menuitem" data-account-action="logout">LOGOUT</button>
                 </section>
               </div>
