chore: sync repo before update release

--- a/components/launcher-shell.html
+++ b/components/launcher-shell.html
@@ -97,8 +97,8 @@
           <div class="stage-surface">
             <header class="top-header">
               <nav class="top-tabs" aria-label="Navegacao principal">
-                <button id="navLibraryBtn" class="top-tab" type="button" data-view="library">Library</button>
                 <button id="navStoreBtn" class="top-tab is-active" type="button" data-view="store">Jogos</button>
+                <button id="navLibraryBtn" class="top-tab" type="button" data-view="library">Biblioteca</button>
               </nav>
 
               <div class="top-actions">
